plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.115'
    id 'idea'
}

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
    withJavadocJar()
}

repositories {
    mavenCentral()
}

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
        }
        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

dependencies {
    api "org.appliedenergistics:appliedenergistics2:${ae2_version}"

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test', Test).configure {
    useJUnitPlatform()
    // The metadata contract test compares the generated mods.toml against the version this
    // build actually declares, so a version bump never needs a second edit in a test.
    systemProperty 'raishxcore.modVersion', mod_version
}

// Opt-in benchmarks: never bundled into the mod or run by the normal test/build tasks.
sourceSets {
    test {
        // Unit tests may exercise main classes that touch NeoForge/AE2 types.
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
    }
    gameTest {
        compileClasspath += sourceSets.main.output + sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.output + sourceSets.main.runtimeClasspath
    }
    benchmark {
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

neoForge.mods {
    raishxcore_tests { sourceSet sourceSets.gameTest }
}
neoForge.runs.configureEach {
    loadedMods = [neoForge.mods.raishxcore]
}
neoForge.runs.gameTestServer {
    loadedMods.add(neoForge.mods.raishxcore_tests)
    systemProperty 'neoforge.enabledGameTestNamespaces', 'raishxcore_tests'
}
def preparePlannerGameTest = tasks.register('preparePlannerGameTest', Copy) {
    from 'src/gameTest/templates'
    into 'run/gameteststructures'
}
tasks.named('runGameTestServer') { dependsOn preparePlannerGameTest }

tasks.register('plannerBenchmark', JavaExec) {
    group = 'verification'
    description = 'Measures planner time, allocated bytes, cache reuse and plan validity.'
    classpath = sourceSets.benchmark.runtimeClasspath
    mainClass = 'com.raishxn.ufocore.benchmark.PlannerBenchmark'
    args layout.buildDirectory.file('reports/planner/benchmark.csv').get().asFile.absolutePath
    jvmArgs '-Xms256m', '-Xmx1g'
}

// Records the baseline the regression gate compares against. Run this only after a deliberate
// change, and read the diff: it is the record of what the planner is expected to cost.
tasks.register('plannerBenchmarkBaseline', JavaExec) {
    group = 'verification'
    description = 'Records the planner benchmark baseline used by the regression gate.'
    classpath = sourceSets.benchmark.runtimeClasspath
    mainClass = 'com.raishxn.ufocore.benchmark.PlannerBenchmark'
    args layout.buildDirectory.file('reports/planner/benchmark.csv').get().asFile.absolutePath, 'update-baseline'
    jvmArgs '-Xms256m', '-Xmx1g'
}

// Compile only the unmodified pure V2 planner and its javac-discovered dependencies from
// a local reference checkout. This reference code is never included in a RaishxCore jar.
def thunderboltSources = providers.gradleProperty('thunderboltSource')
        .map { file(it + '/src/main/java') }
        .getOrElse(file('../Thunderbolt-Core/src/main/java'))
def compileThunderboltReference = tasks.register('compileThunderboltReference', JavaCompile) {
    group = 'verification'
    source fileTree('src/benchmarkReference/java')
    source new File(thunderboltSources, 'com/moakiee/thunderbolt/core/crafting/planner/CraftPlannerV2.java')
    classpath = sourceSets.benchmark.output + sourceSets.main.output
    options.sourcepath = files(thunderboltSources)
    options.compilerArgs += ['-implicit:class']
    destinationDirectory = layout.buildDirectory.dir('classes/thunderboltReference')
    javaCompiler = javaToolchains.compilerFor { languageVersion = JavaLanguageVersion.of(21) }
    dependsOn tasks.named('benchmarkClasses')
}

tasks.register('plannerComparison', JavaExec) {
    group = 'verification'
    description = 'Runs identical synthetic cases through RaishxCore and the local Thunderbolt V2 reference.'
    dependsOn compileThunderboltReference
    classpath = sourceSets.benchmark.runtimeClasspath + files(compileThunderboltReference.flatMap { it.destinationDirectory })
    mainClass = 'com.raishxn.ufocore.benchmark.PlannerBenchmark'
    args layout.buildDirectory.file('reports/planner/comparison.csv').get().asFile.absolutePath, 'compare'
    jvmArgs '-Xms256m', '-Xmx1g'
}

// Differential capability corpus: runs the frozen semantic scenarios through the planner's
// production entry point and fails on a false positive, a defect or a non-deterministic result.
tasks.register('plannerDifferential', JavaExec) {
    group = 'verification'
    description = 'Runs the differential capability corpus through the production planner path.'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.raishxn.ufocore.api.crafting.planner.differential.DifferentialHarness'
    args layout.buildDirectory.file('reports/planner/differential.txt').get().asFile.absolutePath
    jvmArgs '-Xms256m', '-Xmx1g'
}

// Capability matrix: runs the same frozen corpus through RaishxCore and the unmodified local
// Thunderbolt V2 reference, so "who is better" is measured per case instead of inferred.
def compileThunderboltCorpus = tasks.register('compileThunderboltCorpus', JavaCompile) {
    group = 'verification'
    source fileTree('src/corpusReference/java')
    source new File(thunderboltSources, 'com/moakiee/thunderbolt/core/crafting/planner/CraftPlannerV2.java')
    classpath = sourceSets.test.output + sourceSets.main.output
    options.sourcepath = files(thunderboltSources)
    options.compilerArgs += ['-implicit:class']
    destinationDirectory = layout.buildDirectory.dir('classes/thunderboltCorpus')
    javaCompiler = javaToolchains.compilerFor { languageVersion = JavaLanguageVersion.of(21) }
    dependsOn tasks.named('testClasses')
}

tasks.register('plannerCapabilityMatrix', JavaExec) {
    group = 'verification'
    description = 'Runs the differential corpus through RaishxCore and the local Thunderbolt V2 reference.'
    dependsOn compileThunderboltCorpus
    classpath = sourceSets.test.runtimeClasspath + files(compileThunderboltCorpus.flatMap { it.destinationDirectory })
    mainClass = 'com.raishxn.ufocore.api.crafting.planner.differential.CapabilityMatrix'
    args layout.buildDirectory.file('reports/planner/capability-matrix.txt').get().asFile.absolutePath
    jvmArgs '-Xms256m', '-Xmx1g'
}

// Capture slice harness: drives the production capture machine in bounded slices, gates the
// deterministic slicing invariants and reports the measured slice p50/p95/p99 per grid and per tick.
tasks.register('plannerCaptureSlices', JavaExec) {
    group = 'verification'
    description = 'Measures capture slice percentiles and gates the slicing invariants.'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.raishxn.ufocore.neoforge.crafting.CaptureSliceHarness'
    args layout.buildDirectory.file('reports/planner/capture-slices.txt').get().asFile.absolutePath
    jvmArgs '-Xms256m', '-Xmx1g'
}

def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def replaceProperties = [
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            ae2_version_range      : ae2_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into layout.buildDirectory.dir('generated/sources/modMetadata')
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    // Match UFO's release gate. NeoForge registration deliberately escapes this;
    // all other warnings must be resolved or justified at the narrowest scope.
    options.compilerArgs.addAll(['-Xlint:all', '-Xlint:-this-escape', '-Werror'])
    options.encoding = 'UTF-8'
}

tasks.withType(ProcessResources).configureEach {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.named('jar').configure {
    from('LICENSE.md') {
        into 'META-INF'
        rename { 'LICENSE-raishxcore.md' }
    }
}

// The sources artifact carries the same license as the runtime artifact, so a
// published -sources.jar is never license-less on its own.
tasks.named('sourcesJar').configure {
    from('LICENSE.md') {
        into 'META-INF'
        rename { 'LICENSE-raishxcore.md' }
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
            artifactId = mod_id
            pom {
                name = 'RaishxCore'
                description = project.mod_description
                url = 'https://github.com/Raishxn/RaishxCore'
                licenses {
                    license {
                        name = 'GNU Lesser General Public License v3.0 or later'
                        url = 'https://www.gnu.org/licenses/lgpl-3.0.html'
                        distribution = 'repo'
                    }
                }
                developers {
                    developer {
                        id = 'Raishxn'
                        name = 'Raishxn'
                    }
                }
                scm {
                    connection = 'scm:git:https://github.com/Raishxn/RaishxCore.git'
                    developerConnection = 'scm:git:ssh://git@github.com/Raishxn/RaishxCore.git'
                    url = 'https://github.com/Raishxn/RaishxCore'
                }
                issueManagement {
                    system = 'GitHub Issues'
                    url = 'https://github.com/Raishxn/RaishxCore/issues'
                }
            }
        }
    }
    repositories {
        maven {
            name = 'localUfoCore'
            url = layout.buildDirectory.dir('repo')
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
